--- a/index.ipynb
+++ b/index.ipynb
@@ -1269,10 +1269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-44acde1710f8>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-44acde1710f8>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df = pd.read_csv('turnstile_180901.txt')print(df.DATE.dtype)\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
+    "df = pd.read_csv('turnstile_180901.txt')\n",
     "print(df.DATE.dtype)\n",
     "pd.to_datetime(df.DATE)\n",
     "print(df.DATE.dtype)"
