--- a/index.ipynb
+++ b/index.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1283,9 +1283,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('turnstile_180901.txt')\n",
-    "print(df.DATE.dtype)\n",
-    "pd.to_datetime(df.DATE)\n",
-    "print(df.DATE.dtype)"
+    "print(df.DATE.dtype)\n"
    ]
   },
   {
