automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,24 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('turnstile_180901.txt')\n",
-    "print(df.DATE.dtype)\n"
+    "print(df.DATE.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
