automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1288,19 +1288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n"
+    "pd.to_datetime(df.DATE)\n"
    ]
   },
   {
