--- a/index.ipynb
+++ b/index.ipynb
@@ -1288,9 +1288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n"
+     ]
+    }
+   ],
    "source": [
     "pd.to_datetime(df.DATE)\n",
     "print(df.DATE.dtype)"
