automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1288,20 +1288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.to_datetime(df.DATE)\n",
-    "df.DATE.dt.day_name"
+    "df.DATE.dt.day_name()"
    ]
   },
   {
