automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1303,7 +1303,8 @@
     }
    ],
    "source": [
-    "df.DATE.iloc[0]\n"
+    "df.DATE.iloc[0]\n",
+    "pd.to_datetime(df.DATE, format='%m/%d/%Y')"
    ]
   },
   {
