automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1301,7 +1301,7 @@
    ],
    "source": [
     "df.DATE.iloc[0]\n",
-    "pd.to_datetime(df.DATE, format='%m/%d/%Y')\n",
+    "df.DATE = pd.to_datetime(df.DATE, format='%m/%d/%Y')\n",
     "print(df.DATE.dtype)"
    ]
   },
