--- a/index.ipynb
+++ b/index.ipynb
@@ -1288,14 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "object\n"
+      "datetime64[ns]\n"
      ]
     }
    ],
